--- a/index.html
+++ b/index.html
@@ -3,23 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hero Business Card</title>
-  <link rel="stylesheet" href="style1.css" />
+  <title>StartupX - Landing Page</title>
+  <link rel="stylesheet" href="styless.css" />
 </head>
 <body>
-  <section class="hero-card">
-    <div class="profile-img">
-      <img src="https://i.imgur.com/mtbl1fZ.png" alt="Logo or Avatar" />
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Launch Your Startup with Confidence 🚀</h1>
+    <p>Simple, modern, responsive landing page that converts.</p>
+    <button><a href="menu.html" class="btn">Get Started</a></button>
+
+  </section>
+
+  <!-- Features Section -->
+  <section class="features">
+    <div class="feature-card">
+      <h2>🚀 Fast Deployment</h2>
+      <p>Deploy your landing page in minutes with zero hassle.</p>
     </div>
-    <h1>StartupX - Make It Happen</h1>
-    <p class="tagline">We help launch & scale your ideas faster 🚀</p>
-    <p class="description">
-      Full-stack landing page services with SEO, responsiveness, and ultra-fast load time. We design your first impression to last.
-    </p>
-    <div class="actions">
-      <a href="#portfolio" class="btn primary">View Portfolio</a>
-      <a href="#contact" class="btn secondary">Let's Talk</a>
+    <div class="feature-card">
+      <h2>🎯 Targeted Design</h2>
+      <p>Optimized layouts that boost conversion and engagement.</p>
+    </div>
+    <div class="feature-card">
+      <h2>📱 Mobile Ready</h2>
+      <p>Responsive design that works beautifully on all devices.</p>
+    </div>
+    <div class="feature-card">
+      <h2>🔒 Secure by Design</h2>
+      <p>Built with best practices for speed, safety, and trust.</p>
+      
     </div>
   </section>
+  <footer class="footer">
+    <p>Created by Ishant | 📧 gorivaleishant@gmail.com | 📱 +91-8010065117</p>
+  </footer>
+  
+
 </body>
 </html>
