--- a/menu.html
+++ b/menu.html
@@ -105,7 +105,7 @@
       <div class="option-card">
         <img src="image/portfoliopreview.jpg" alt="Resume preview" />
         <h3>Resume Website</h3>
-        <a href="resume.html" class="btn">View</a>
+        <a href="resumepreview1.html" class="btn">View</a>
       </div>
     </div>
   </section>
