--- a/menu.html
+++ b/menu.html
@@ -95,7 +95,7 @@
       <div class="option-card">
         <img src="preview-card.png" alt="Card preview" />
         <h3>Business Card</h3>
-        <a href="card.html" class="btn">View</a>
+        <a href="businesscard.html" class="btn">View</a>
       </div>
       <div class="option-card">
         <img src="preview-landing.png" alt="Landing preview" />
