--- a/businesscard.html
+++ b/businesscard.html
@@ -17,7 +17,7 @@
       Full-stack landing page services with SEO, responsiveness, and ultra-fast load time. We design your first impression to last.
     </p>
     <div class="actions">
-      <a href="#portfolio" class="btn primary">View Portfolio</a>
+      <a href="https://portfolio-dun-eight-89.vercel.app/" class="btn primary">View Portfolio</a>
       <a href="#contact" class="btn secondary">Let's Talk</a>
     </div>
   </section>
