--- a/menu.html
+++ b/menu.html
@@ -98,7 +98,7 @@
         <a href="businesscard.html" class="btn">View</a>
       </div>
       <div class="option-card">
-        <img src="preview-landing.png" alt="Landing preview" />
+        <img src="landingpreview.jpg" alt="Landing preview" />
         <h3>Landing Page</h3>
         <a href="landing.html" class="btn">View</a>
       </div>
