--- a/menu.html
+++ b/menu.html
@@ -93,7 +93,7 @@
     <h1>Choose What You Need 🚀</h1>
     <div class="menu-options">
       <div class="option-card">
-        <img src="busipreview.jpg" alt="Card preview" />
+        <img src="images/busipreview.jpg" alt="Card preview" />
         <h3>Business Card</h3>
         <a href="businesscard.html" class="btn">View</a>
       </div>
