--- a/businesscard.html
+++ b/businesscard.html
@@ -18,7 +18,7 @@
     </p>
     <div class="actions">
       <a href="https://portfolio-dun-eight-89.vercel.app/" class="btn primary">View Portfolio</a>
-      <a href="#contact" class="btn secondary">Let's Talk</a>
+      <a href="https://wa.me/918010065117" class="btn secondary">Let's Talk</a>
     </div>
   </section>
 </body>
