--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <section class="hero">
     <h1>Launch Your Startup with Confidence 🚀</h1>
     <p>Simple, modern, responsive landing page that converts.</p>
-    <button><a href="menu.html" class="btn">Get Started</a></button>
-
+    <a href="menu.html" class="btn"><button>Get Started</button></a>
   </section>
 
   <!-- Features Section -->
@@ -33,13 +32,39 @@
     <div class="feature-card">
       <h2>🔒 Secure by Design</h2>
       <p>Built with best practices for speed, safety, and trust.</p>
-      
     </div>
   </section>
+
+  <!-- Services Section -->
+  <section class="services" id="services">
+    <h2>Services I Offer</h2>
+    <p>Helping individuals and businesses get online with clean, responsive designs.</p>
+    <div class="service-cards">
+
+      <div class="service-card">
+        <h3>Resume Design</h3>
+        <p>Modern, ATS-friendly resumes tailored to your career goals.</p>
+        <a href="https://wa.me/918010065117?text=I%20want%20a%20resume%20designed" target="_blank">Request Now →</a>
+      </div>
+
+      <div class="service-card">
+        <h3>Portfolio Websites</h3>
+        <p>Showcase your work and personality online with a stunning portfolio.</p>
+        <a href="https://wa.me/918010065117?text=I%20need%20a%20portfolio%20website" target="_blank">Get Started →</a>
+      </div>
+
+      <div class="service-card">
+        <h3>Business Pages</h3>
+        <p>Landing pages that capture attention and help your brand grow.</p>
+        <a href="https://wa.me/918010065117?text=I%20want%20a%20business%20landing%20page" target="_blank">Contact Me →</a>
+      </div>
+
+    </div>
+  </section>
+
   <footer class="footer">
     <p>Created by Ishant | 📧 gorivaleishant@gmail.com | 📱 +91-8010065117</p>
   </footer>
-  
 
 </body>
 </html>
