--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StartupX - Landing Page</title>
+
+  <!-- ✅ SEO Title & Description -->
+  <title>Project Hub | Startup Landing Pages, Portfolios & Resume Design</title>
+  <meta name="description" content="Launch your startup with confidence 🚀. Get modern landing pages, portfolios, and resumes designed to boost your online presence." />
+  <meta name="keywords" content="startup landing page, portfolio website, resume design, business page, responsive web design" />
+
+  <!-- ✅ Open Graph (for social & Google) -->
+  <meta property="og:title" content="Project Hub | Startup Landing Pages, Portfolios & Resume Design" />
+  <meta property="og:description" content="Launch your startup with confidence 🚀. Simple, modern, responsive landing page that converts." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://project-hub-ochre.vercel.app/" />
+  <meta property="og:image" content="https://project-hub-ochre.vercel.app/images/preview.png" />
+
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon.png" />
+
+  <!-- ✅ Google Analytics (Replace with your GA4 ID) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXX');
+  </script>
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="styless.css" />
 </head>
 <body>
