updated codes for analytics and seo

--- a/businesscard.html
+++ b/businesscard.html
@@ -3,13 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hero Business Card</title>
+
+  <!-- ✅ SEO Title & Description -->
+  <title>Project Hub | Digital Business Card - StartupX</title>
+  <meta name="description" content="StartupX - Make It Happen 🚀. A modern, digital business card with portfolio and contact links to launch and scale your ideas faster." />
+  <meta name="keywords" content="digital business card, startupx, online business profile, portfolio card, contact page, responsive business card" />
+
+  <!-- ✅ Open Graph for social & Google -->
+  <meta property="og:title" content="Project Hub | Digital Business Card - StartupX" />
+  <meta property="og:description" content="We help launch & scale your ideas faster 🚀. Full-stack landing page services with SEO, responsive design, and ultra-fast performance." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://project-hub-ochre.vercel.app/businesscard.html" />
+  <meta property="og:image" content="https://i.imgur.com/mtbl1fZ.png" />
+
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon.png" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLF5RG816E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KLF5RG816E');
+</script>
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="style1.css" />
 </head>
 <body>
   <section class="hero-card">
     <div class="profile-img">
-      <img src="https://i.imgur.com/mtbl1fZ.png" alt="Logo or Avatar" />
+      <img src="https://i.imgur.com/mtbl1fZ.png" alt="StartupX Logo or Avatar" />
     </div>
     <h1>StartupX - Make It Happen</h1>
     <p class="tagline">We help launch & scale your ideas faster 🚀</p>
