--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLF5RG816E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-KLF5RG816E');
+</script>
   <!-- ✅ SEO Title & Description -->
   <title>Project Hub | Startup Landing Pages, Portfolios & Resume Design</title>
   <meta name="description" content="Launch your startup with confidence 🚀. Get modern landing pages, portfolios, and resumes designed to boost your online presence." />
@@ -19,14 +27,7 @@
   <!-- ✅ Favicon -->
   <link rel="icon" type="image/png" href="images/favicon.png" />
 
-  <!-- ✅ Google Analytics (Replace with your GA4 ID) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXX');
-  </script>
+
 
   <!-- Stylesheet -->
   <link rel="stylesheet" href="styless.css" />
