--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StartupX - Modern Landing</title>
+
+  <!-- ✅ SEO Title & Description -->
+  <title>Project Hub | Modern Startup Landing Page</title>
+  <meta name="description" content="Empowering startups to launch fast 🚀. A clean, modern, and mobile-ready landing page solution designed for high conversions." />
+  <meta name="keywords" content="modern landing page, startup landing design, responsive landing page, business landing, web design" />
+
+  <!-- ✅ Open Graph (for social & Google preview) -->
+  <meta property="og:title" content="Project Hub | Modern Startup Landing Page" />
+  <meta property="og:description" content="Clean, modern, and mobile-ready landing solution for startups. Optimized for growth and conversions." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://project-hub-ochre.vercel.app/landing.html" />
+  <meta property="og:image" content="https://project-hub-ochre.vercel.app/images/preview.png" />
+
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon.png" />
+
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLF5RG816E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KLF5RG816E');
+</script>
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="style-landing.css" />
 </head>
 <body>
