--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Choose Your Need</title>
+  <title>Project Hub - Choose Your Need</title>
+  <meta name="description" content="Choose from Business Card, Landing Page, and Resume Website templates. Project Hub helps you create professional websites quickly." />
+  <meta name="keywords" content="business card website, landing page template, resume website, Project Hub" />
+  <meta name="author" content="Project Hub" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLF5RG816E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KLF5RG816E');
+</script>
   <style>
     * {
       box-sizing: border-box;
@@ -89,25 +101,27 @@
   </style>
 </head>
 <body>
-  <section class="menu">
+  <main class="menu">
     <h1>Choose What You Need 🚀</h1>
     <div class="menu-options">
-      <div class="option-card">
-        <img src="images/busipreview.jpg" alt="Card preview" />
+      <article class="option-card">
+        <img src="images/busipreview.jpg" alt="Preview of Business Card template" />
         <h3>Business Card</h3>
         <a href="businesscard.html" class="btn">View</a>
-      </div>
-      <div class="option-card">
-        <img src="images/landingpreview.jpg" alt="Landing preview" />
+      </article>
+
+      <article class="option-card">
+        <img src="images/landingpreview.jpg" alt="Preview of Landing Page template" />
         <h3>Landing Page</h3>
         <a href="landing.html" class="btn">View</a>
-      </div>
-      <div class="option-card">
-        <img src="image/portfoliopreview.jpg" alt="Resume preview" />
+      </article>
+
+      <article class="option-card">
+        <img src="images/portfoliopreview.jpg" alt="Preview of Resume Website template" />
         <h3>Resume Website</h3>
         <a href="resumepreview1.html" class="btn">View</a>
-      </div>
+      </article>
     </div>
-  </section>
+  </main>
 </body>
 </html>
